--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "homepage": "https://github.com/LearnersGuild/idm#readme",
   "dependencies": {
     "@learnersguild/idm-jwt-auth": "^2.0.1",
+    "auto-loader": "^0.2.0",
     "autoprefixer": "^6.5.1",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.0",
@@ -127,6 +128,7 @@
     "sass-resources-loader": "^1.0.2",
     "serve-static": "^1.10.0",
     "style-loader": "^0.13.0",
+    "thinky": "^2.3.8",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
